// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors() includes more information when abourtEarly is false 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"role\\" must be larger than or equal to 4. \\"name\\" is required",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "role",
      "name",
    ],
    "source": "query",
  },
}
`;

exports[`errors() only includes key values if joi returns details 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"first\\" is required",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [],
    "source": "body",
  },
}
`;

exports[`errors() responds with a joi error from celebrate middleware 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"role\\" must be larger than or equal to 4",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "role",
    ],
    "source": "query",
  },
}
`;
